* commit 2104552302abaa2f9acc357ccf62fc0661b63e84
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed May 21 16:49:02 2014 -0400
| 
|     Misc. changes that I don't remember...Hopefully nothing major
|  
* commit c9f14c4723f06b935e25084c860f27a1520ee46d
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Apr 16 23:32:00 2014 -0400
| 
|     Implemented analytical version of cross section calculation for spheres. Still need to implement analytical solution to the differential cross section for spheres.
|  
* commit 3794b4b48c14cbc1ac56d5e3eb6bb9b94bd45b58
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Apr 1 20:41:59 2014 -0400
| 
|     Fixed a bug which was caused when using material-file and not material-file1,2,etc. One subroutine was using the wrong array of indices of refraction (the array it was using was uninitialized), so ggadt printed gibberish. Problem should be fixed now.
|  
* commit 2217f259db4c05dcf199fbadaf4175b4dc8f3598
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Mar 31 09:24:03 2014 -0400
| 
|     Minor documentation changes, minor changes to some scripts
|  
* commit 3a8a72dedee10f55ae016c905f729fc5dd787fae
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 23:08:13 2014 -0400
| 
|     Added documentation for mixed grain compositions, organized table of input parameters, still need to add figures and additional examples.
|  
* commit 62c3592381ef693a96f39c73d9b3de179a074fce
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 20:56:02 2014 -0400
| 
|     Added ability to do mixed composition agglomerates.
|  
* commit 2178239186496d2278e749096ab1f15d963e81a6
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 14:15:03 2014 -0400
| 
|     Fixed errors in configure.ac (was checking for new_line wrong), added check for random_number(), tested dist on metis.
|  
* commit af607588a85befd123fd334b9c73a0ae1dacce6d
| Author: John Hoffman <jah5@princeton.edu>