@@ -1,0 +1,71 @@
+# Default parameters used by GGADT
+#==================================
+# Last modified by John Hoffman (May 29, 2014)
+
+# Geometry of grain 
+# | one of: 'sphere','spheres' (or 'agglomerate'), or 'ellipsoid'
+grain-geometry 			= 'ellipsoid'	
+
+# effective radius (radius of sphere with same volume)
+aeff					= 0.2
+# Number of grid elements (along one dimension) to resolve grain
+ngrain					= 128
+
+# IF grain-geometery=ellipsoid (these are all ratios)
+grain-axis-x           = 1.0
+grain-axis-y           = 1.0
+grain-axis-z           = 1.0 
+
+# IF grain-geometry=agglomerate
+cluster-file-name      = ''
+
+# Grain composition
+# Path to material index file
+material-file 			= "@abs_top_srcdir@/data/materials/index_silD03"
+
+# parameters for differential scattering cross section calculation
+# units: keV
+ephot 					= 2.0
+#  Re(m-1)
+ior-re					=-1.920E-4
+#  Re(m)
+ior-im					= 2.807E-5
+# | 
+# | DO NOT define ior-re or ior-im if you also have defined 
+# | a material-file. It will pull m(E) automatically.
+# |
+
+## number of angles to calculate diff. scat. cross section (ntheta) or spacing between them (dtheta)
+# (arcseconds) Choose only one of these parameters 
+dtheta=25.0
+#nscatter               = 100		# 
+
+## Maximum angle for which the diff. scat. cross section is calculated
+# (arcseconds)
+max-angle			   = 1500.
+
+# IF compiled with --enable-fftw3 
+fftw-optimization      = 'estimate'
+
+#grain_axis_ratio      = 1.0
+
+rotation-axis          = 'none'		# For ellipsoidal or agglomerate grains
+euler-angle-mode       = 'random' 	# Either 'sequential', 'random' or 'custom' 
+									# | tells GGADT how to choose orientations over which to average
+									# | calculations.
+euler-angle-file       = ''			# If euler-angle-mode='custom'; Path to file listing Euler angles
+									# | over which to average calculations
+									# If euler-angle-mode is NOT 'custom'; number of orientations
+									# | over which to average calcuations
+norientations          = 64
+
+
+# For integrated cross section (pass --integrated flag)
+#nephots                = 100		# number of photon energies to calculate integrated cross sections
+# | OR define energy spacing
+dephot                 = 0.1
+# minimum photon energy 		
+ephot-min              = 0.1
+# maximum photon energy
+ephot-max              = 5.0
+
